# fnaf-python-bot

./: .gitignore  README.md  beatfnaf1(browser_edition).py  beatfnaf1.py  imports.txt  pyproject.toml  requirements.txt  runbot.py
Bot/FNAF1/: beatfnaf1.py  constants.py  states.py
Engine/: exceptions.py  game_state.py  input.py  vision.py
src/: __init__.py  __main__.py  configs.py  game.py  game_state.py  helpers.py  life_cycle.py  office_state.py
