[project]
name = "fnaf-python-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "evdev==1.9.3",
    "mouseinfo==0.1.3",
    "psutil==7.2.2",
    "pyautogui==0.9.54",
    "pygetwindow==0.0.9",
    "pymsgbox==2.0.1",
    "pynput==1.8.1",
    "pyperclip==1.11.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-xlib==0.33",
    "python3-xlib==0.15",
    "pytweening==1.2.0",
    "six==1.17.0",
]
