[project]
name = "fnaf-python-bot"
version = "0.1.0"
description = "A Python script that can beat FNAF 1 using a computer controlled mouse and keyboard."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "mss>=10.1.0",
    "psutil>=7.2.2",
]
